src/test/ui/lub-glb/old-lub-glb-hr-noteq1.nll.stderr
error: higher-ranked subtype error
  --> $DIR/old-lub-glb-hr-noteq1.rs:11:14
   |
LL |         _ => y,
   |              ^

error: aborting due to previous error

